@@ -1,5 +1,5 @@
-DIST musicmanager-0.10.22.tar.bz2 422520 RMD160 6fea96a7e21a59e049e669cf7cd3bec194264abb SHA1 b284e61f12cb4136971e3d828b689d734e9c079f SHA256 8083dab95a483ba975873ce6bed1054752b2fdb207d2424383aa1d77593ee536
-EBUILD gogglesmm-0.10.22.ebuild 699 RMD160 2110a0db525514014205a9c05e29b22ecd3bb11f SHA1 301575ba8149fc9e5c7870a19ebc0dd168b6f4e4 SHA256 7a992c7d436067e97e2c73c61798b082d04504b738be94e3f5be0f76db515e52
+DIST gogglesmm-0.10.23.tar.bz2 422601 RMD160 ec494664d6ca7ce9370ec58773ef9575633aacbe SHA1 6dab34e88312eddf061a51f0ea10329dee8d7063 SHA256 734a627b03f39a76710bd7f4b7bb7b5adfebbc1cb0e2cbf70b938d32d71eb109
+EBUILD gogglesmm-0.10.23.ebuild 667 RMD160 8c9aef0528aea3c6628fd7fb4fc4409412c7c842 SHA1 8aefba3320b1a3dc1d1dddfe9ce38dd832be0fc3 SHA256 653a6836eb4098d9c3108863797441e975c08556b25b5249747ca6f6b9834d47
 EBUILD gogglesmm-9999.ebuild 706 RMD160 bdfb3635fe70b248c1332db316019b38f511a890 SHA1 7dd06a30ca79c39d80257d71d71020ae7d1db72c SHA256 0b5d4f54f75364011f52761752f6c63234b5e04495c90261ea3f861b70fe81dc
-MISC ChangeLog 515 RMD160 70efb89490e81308ba090cf0a8c76441ae0361d8 SHA1 88e330687d660bc46d51f7af6789bd19807775e2 SHA256 392ef6dc6e56864dea1b54e7cc99743f92ebff7b94f5c62fa46f550127b78369
+MISC ChangeLog 670 RMD160 33a19687191d9b8e901209f821bb2132f3f7f6b1 SHA1 4a8a38c6a2b4b1c8520796cdf95cabd6997ddf05 SHA256 41d987a4d176af18c0888a2e6becdaa8f1fefd48f8e71171ff37d50b34585d72
 MISC metadata.xml 325 RMD160 d8ccee8c126b1cbc02a7b762daee0d16902b8d66 SHA1 6938b7fbb013f85663df9344ae0011847ccf0e49 SHA256 da9821bcb878103ef542ff5ecc730ba740180a24e91c840e83d2999fe3901b47
