@@ -6,16 +6,15 @@ EAPI=2
 
 inherit base
 
-MY_P=musicmanager-${PV}
-
 DESCRIPTION="Lightweight FOX music collection manager and player"
 HOMEPAGE="http://gogglesmm.googlecode.com/"
-SRC_URI="http://${PN}.googlecode.com/files/${MY_P}.tar.bz2"
+SRC_URI="http://${PN}.googlecode.com/files/${P}.tar.bz2"
 
 LICENSE="GPL-3"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE="dbus"
+RESTRICT="mirror"
 
 RDEPEND="dev-db/sqlite
 	media-libs/taglib[mp4]
@@ -24,8 +23,6 @@ RDEPEND="dev-db/sqlite
 	x11-libs/fox[png]
 	dbus? ( sys-apps/dbus )"
 DEPEND="${RDEPEND}"
-
-S=${WORKDIR}/${MY_P}
 
 src_prepare() {
 	sed -i -e 's:icons/hicolor/48x48/apps:pixmaps:' Makefile || die
