@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  04 Jun 2010; James Broadhead (hangfire) <jamesbroadhead@gmail.com>
+  -gogglesmm-0.10.22.ebuild, +gogglesmm-0.10.23.ebuild:
+  Version bump for gogglesmm
+
   12 May 2010; James Broadhead (hangfire) <jamesbroadhead@gmail.com>
   -gogglesmm-0.10.21.ebuild, +gogglesmm-0.10.22.ebuild,
   gogglesmm-9999.ebuild:
